# ardrone_slam

./: ARDroneFlight.bag  CMakeLists.txt  README.md  package.xml
Matlab/: projecao3D2D.m
config/: arrow1.rviz
launch/: joystick_controller.launch  plot_slam.launch  slam.launch
nodes/: main.py  plot.py  plot.py~  predicao.py  push.sh  showCamera.py
nodes/slam_utils/: matrix.py  transf.py
nodes/testes/: testeCobertura.py  testeCovariancia (copy).txt  testeCovariancia.py  testeCovariancia.txt  testeElipse2.py  testeEllipse.py  testeLARAcompleto.py  testeMahalanobis.py  testePosicaoFeatures.py  testePosicaoFeatures.txt  testePredSlam_artemoderna.py  testePredicao.py  testePredicao.txt  testeProjecao2D3D.py  testeProjecao3D2D.py
src/: Distortion.xml  Intrinsics.xml  Pose3D.py  Pose3D_D.py  Pose3D_R.py  Pose3D_ultimo_2015.py  _main.py  ardrone_camera_calibration.py  calibration.py  camera_calibration.py  comandos_setup  comandos_setup~  dados.py  fast.py  image.py  insertMatrix.py  keyboard_controller.py  localization.py  localization_R.py  localization_R_2.py  main_prop.py  minimum_viable_publisher.py  minimum_viable_subscriber.py  octave-core  orb.py  proj_test.py  projectPoints.py  publish_calib_image.py  ros_calibration_results.txt  shitomasi.py  sift.py
src/robotics/: transf.py
